--- a/src/app/principal/components/accueil/accueil.component.html
+++ b/src/app/principal/components/accueil/accueil.component.html
@@ -1,4 +1,81 @@
+<header id="zone-entete">
+  <div class="contenu-entete">
+    <div class="d-flex h-100"></div>
 
-<app-navigation-haut></app-navigation-haut>
+    <div class="d-flex h-100">
 
-<app-contenaire-allure></app-contenaire-allure>
+      <form [formGroup]="formRecherche" class="w-100">
+        <div class="row col-md-12 recherche-projets w-100">
+          <div class="col-md-1 pt-1">
+            <label for="nomProjet">
+              Projet
+            </label>
+          </div>
+
+          <div class="col-md-5">
+            <ng-select classes="form-control form-control-sm" [items]="listeProjets" bindLabel="nom" bindValue="nom"
+              [multiple]="false" formControlName="nomProjet" appendTo="body"
+              notFoundText="{{'commun.TEXTE_NON_TROUVE' | translate}}"
+              clearAllText="{{'commun.EFFACER_TOUS' | translate}}" (change)="changerProjet()">
+            </ng-select>
+
+          </div>
+
+          <div class=" col-md-1 pt-1">
+            <label for="version"> Version </label>
+          </div>
+
+          <div class=" col-md-5">
+
+            <ng-select classes="form-control form-control-sm" [items]="listeVersions" bindLabel="version"
+              bindValue="version" [multiple]="false" formControlName="version" appendTo="body"
+              notFoundText="{{'commun.TEXTE_NON_TROUVE' | translate}}"
+              clearAllText="{{'commun.EFFACER_TOUS' | translate}}" (change)="changerVersion()">
+            </ng-select>
+
+          </div>
+        </div>
+      </form>
+
+
+
+
+    </div>
+
+    <div class="d-flex align-items-center">
+
+      <div id="zone-utilisateur" ngbDropdown class="pr-1">
+        <a role="button" ngbDropdownToggle>
+
+          <div class="media info-utilisateur">
+            <div>
+              <img [src]="imageUtilisateur" onError="this.src='./assets/images/utilisateur.png'" />
+            </div>
+            <div class="media-body text-truncate">
+              <h6 class="mt-2 titre text-truncate">{{nomUtilisateur}}</h6>
+              <p class="sous-titre text-truncate">{{roleUtilisateur}}</p>
+            </div>
+          </div>
+
+        </a>
+
+        <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
+
+
+          <div class="dropdown-divider"></div>
+
+          <a (click)="deconnexion()" class="dropdown-item" translate>
+            <i class="fa fa-sign-out mr-1 icone-deconnexion"></i>
+            commun.DECONNEXION
+          </a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</header>
+
+<div class="allure-contenaire">
+  <iframe [src]="url|safeUrl"  width="100%" height="100%" title="demo"></iframe>
+</div>
